<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.afrikappakorps.sticksandstones.GameActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_game"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:elevation="4dp"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
    <TextView
        android:id="@+id/text_prompt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_game"
        app:layout_constraintBottom_toTopOf="@+id/text_name1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/prompt"
        android:textSize="24sp"
        android:gravity="center_horizontal"/>
    <!-- FIRST PLAYER -->
    <TextView
        android:id="@+id/text_name1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_prompt"
        app:layout_constraintBottom_toTopOf="@+id/text_entry1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/name"
        android:textColor="#212121"
        android:typeface="monospace"
        android:background="#FFA726"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:ellipsize="end"/>
    <TextView
        android:id="@+id/text_entry1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/text_name1"
        app:layout_constraintBottom_toTopOf="@+id/text_name2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button_vote1"
        android:padding="8dp"
        tools:text="@string/entry"
        android:textSize="24sp"/>
    <Button
        android:id="@+id/button_vote1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="@+id/text_entry1"
        app:layout_constraintBottom_toBottomOf="@+id/text_entry1"
        app:layout_constraintLeft_toRightOf="@+id/text_entry1"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/vote"
        android:onClick="onButtonClick"/>
    <!-- SECOND PLAYER -->
    <TextView
        android:id="@+id/text_name2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_entry1"
        app:layout_constraintBottom_toTopOf="@+id/text_entry2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/name"
        android:textColor="#212121"
        android:typeface="monospace"
        android:background="#FFA726"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:ellipsize="end"/>
    <TextView
        android:id="@+id/text_entry2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/text_name2"
        app:layout_constraintBottom_toTopOf="@+id/text_judge"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button_vote2"
        android:padding="8dp"
        tools:text="@string/entry"
        android:textSize="24sp"/>
    <Button
        android:id="@+id/button_vote2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="@+id/text_entry2"
        app:layout_constraintBottom_toBottomOf="@+id/text_entry2"
        app:layout_constraintLeft_toRightOf="@+id/text_entry2"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/vote"
        android:onClick="onButtonClick"/>
    <!-- JUDGE -->
    <TextView
        android:id="@+id/text_judge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_entry2"
        app:layout_constraintBottom_toTopOf="@+id/timer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/judge"
        android:textSize="24sp"
        android:typeface="monospace"
        android:gravity="center_horizontal"
        android:background="?attr/colorPrimary"/>
    <Chronometer
        android:id="@+id/timer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_judge"
        app:layout_constraintBottom_toTopOf="@+id/text_timer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="36sp"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/text_timer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/timer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/timer"
        android:typeface="monospace"
        android:gravity="center_horizontal"/>
</android.support.constraint.ConstraintLayout>
